[package]
name = "rust-lnpbp-wasm-poc"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnpbp = { git = "https://github.com/LNP-BP/rust-lnpbp.git" }

[profile.release]
opt-level = "s"
